# PromptCore

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  final_test2.txt  pyproject.toml  pytest.ini  test_out.txt  test_out2.txt
.claude/: settings.local.json
benchmarks/: README.md  bench_complexity_calibration.py  bench_framework_coverage.py  bench_latency.py  bench_selection_accuracy.py
docs/: COMPARISON.md
scripts/: verify_mcp_frameworks.py
src/promptcore/: __init__.py  config.py  main.py
src/promptcore/domain/: selector.py
src/promptcore/domain/frameworks/: thought_generation.py
src/promptcore/persistence/: models.py  storage.py
src/promptcore/utils/: __init__.py  complexity.py  safe_files.py
src/promptsmith/: __init__.py  config.py  main.py
src/promptsmith/domain/: __init__.py  builder.py
src/promptsmith/domain/frameworks/: __init__.py  advanced.py  base.py  decomposition.py  ensembling.py  self_criticism.py  zero_shot.py
src/promptsmith/persistence/: __init__.py  storage.py
tests/: conftest.py
tests/e2e/: test_workflow.py
tests/integration/: test_main.py
tests/unit/: test_builder.py  test_safe_files.py  test_selector.py  test_storage.py
